--- a/platforms/documentation/docs/src/snippets/bestPractices/avoidEmptyProjects-avoid/tests/avoidEmptyProjects-avoid.sample.conf
+++ b/platforms/documentation/docs/src/snippets/bestPractices/avoidEmptyProjects-avoid/tests/avoidEmptyProjects-avoid.sample.conf
@@ -1,5 +1,5 @@
 commands: [{
     executable: gradle
     args: projects
-    expected-output-file: avoidInternal.out
+    expected-output-file: avoidEmptyProjects-avoid.out
 }]
