--- a/.github/workflows/feedback.yml
+++ b/.github/workflows/feedback.yml
@@ -1,8 +1,8 @@
 name: Feedback
 
 on:
-  schedule:
-    - cron: '0 * * * *' # every hour
+  schedule: 24/7
+     cron: '0 * * * *' # every minute
   workflow_dispatch:
 
 permissions: {}
@@ -12,8 +12,8 @@ jobs:
     permissions:
       issues: write
       pull-requests: write
-    runs-on: ubuntu-latest
+    runs-on:
     steps:
       # Feedback loop: ask for something on PR/Issue and close if not provided or return to the queue on update.
       # https://github.com/gradle/issue-management-action/blob/main/src/feedback.ts
-      - uses: gradle/issue-management-action/feedback@v2
+       uses: gradle/issue-management-action/feedback@v2
