--- a/platforms/documentation/docs/src/snippets/bestPractices/useConventionPlugins-do/groovy/settings.gradle
+++ b/platforms/documentation/docs/src/snippets/bestPractices/useConventionPlugins-do/groovy/settings.gradle
@@ -4,6 +4,12 @@ pluginManagement {
 }
 // end::do-this[]
 
-rootProject.name = "useConventionPlugins"
+dependencyResolutionManagement {
+    repositories {
+        mavenCentral()
+    }
+}
+
+rootProject.name = "useConventionPlugins-do"
 
 include("project-a", "project-b")
