Apply suggestions from code review
Mostly grammar corrections

Co-authored-by: Oleg Nenashev <o.v.nenashev@gmail.com>
Co-authored-by: Stefan Wolf <wolf@gradle.com>
Co-authored-by: Laura Kassovic <lkassovic@gradle.com>
Signed-off-by: Reinhold Degenfellner <rdegenfellner@gradle.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ gradle.internal.testdistribution.writeTraceFile=true
 develocity.internal.testdistribution.writeTraceFile=true
 gradle.internal.testdistribution.queryResponseTimeout=PT20S
 develocity.internal.testdistribution.queryResponseTimeout=PT20S
-# If enabled, a Build Scan is tagged with TD_REMOTE_EXECUTOR_ENQUEUED_IN_WRONG_STATE if a remote executor is trying to be enqueued in a wrong state.
+# If enabled, the Build Scan is tagged with TD_REMOTE_EXECUTOR_ENQUEUED_IN_WRONG_STATE if a remote executor is trying to be enqueued in a wrong state.
 systemProp.develocity.internal.testacceleration.enableCustomValues=true
 # If enabled, the build logs whenever a WorkerReadyMessage is received. This should help analyzing the problem of remote executors being in wrong state.
 systemProp.develocity.internal.testdistribution.logWorkerReadyMessage=true
