Add documentation changes for reproducible archive permissions

--- a/platforms/documentation/docs/src/snippets/files/archives/groovy/build.gradle
+++ b/platforms/documentation/docs/src/snippets/files/archives/groovy/build.gradle
@@ -51,6 +51,8 @@ tasks.withType(AbstractArchiveTask).configureEach {
     preserveFileTimestamps = true
     // Make file order based on the file system
     reproducibleFileOrder = false
+    // Use permissions from the file system
+    useFileSystemPermissions()
 }
 // end::revert-reproducible[]
 
