--- a/platforms/documentation/docs/src/snippets/files/archives/groovy/build.gradle
+++ b/platforms/documentation/docs/src/snippets/files/archives/groovy/build.gradle
@@ -48,11 +48,11 @@ tasks.register('tar', Tar) {
 // tag::revert-reproducible[]
 tasks.withType(AbstractArchiveTask).configureEach {
     // Use file timestamps from the file system
-    preserveFileTimestamps = true
+    preserveFileTimestamps = true  // <1>
     // Make file order based on the file system
-    reproducibleFileOrder = false
+    reproducibleFileOrder = false  // <2>
     // Use permissions from the file system
-    useFileSystemPermissions()
+    useFileSystemPermissions()     // <3>
 }
 // end::revert-reproducible[]
 
