Refine and expand the Avoid using eager APIs on File Collections item

--- a/platforms/documentation/docs/src/snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-avoid/tests/avoidJdkCollectionApiOnFileCollections-avoid.sample.conf
+++ b/platforms/documentation/docs/src/snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-avoid/tests/avoidJdkCollectionApiOnFileCollections-avoid.sample.conf
@@ -1,17 +1,13 @@
 commands: [{
     executable: gradle
-    args: badCountingTask
+    args: badZippingTask
     expected-output-file: avoidJdkCollectionApiOnFileCollections-avoid.out
 }, {
     executable: gradle
-    args: badCountingTask2
+    args: badZippingTask2
     expected-output-file: avoidJdkCollectionApiOnFileCollections-avoid2.out
 }, {
-    executable: gradle
-    args: badCountingTask3
-    expected-output-file: avoidJdkCollectionApiOnFileCollections-avoid3.out
-}, {
-    executable: gradle
-    args: badZippingTask
-    expected-output-file: avoidJdkCollectionApiOnFileCollections-avoid-zip.out
-}]
+     executable: gradle
+     args: badZippingTask3
+     expected-output-file: avoidJdkCollectionApiOnFileCollections-avoid3.out
+ }]
