--- a/platforms/documentation/docs/src/snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-avoid/groovy/lib/build.gradle
+++ b/platforms/documentation/docs/src/snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-avoid/groovy/lib/build.gradle
@@ -9,39 +9,22 @@ dependencies {
 }
 
 // tag::avoid-this[]
-abstract class FileCounterTask extends DefaultTask {
-    @InputFiles
-    abstract ConfigurableFileCollection getCountMe();
-
-    @TaskAction
-    void countFiles() {
-        logger.lifecycle("Count: " + countMe.files.size())
-    }
-}
-
-tasks.register("badCountingTask", FileCounterTask) {
+tasks.register("badZippingTask", Zip) {
     if (!configurations.runtimeClasspath.isEmpty()) { // <1>
-        logger.lifecycle("Resolved: " + (configurations.runtimeClasspath.state == RESOLVED))
-        countMe.from(configurations.runtimeClasspath)
-    }
-}
-
-tasks.register("badCountingTask2", FileCounterTask) {
-    def files = configurations.runtimeClasspath.files // <2>
-    countMe.from(files)
-    logger.lifecycle("Resolved: " + (configurations.runtimeClasspath.state == RESOLVED))
-}
-
-tasks.register("badCountingTask3", FileCounterTask) {
-    def files = configurations.runtimeClasspath + layout.projectDirectory.file("extra.txt") // <3>
-    countMe.from(files)
-    logger.lifecycle("Resolved: " + (configurations.runtimeClasspath.state == RESOLVED))
-}
-
-tasks.register("badZippingTask", Zip) { // <4>
-    if (!configurations.runtimeClasspath.isEmpty()) {
         logger.lifecycle("Resolved: " + (configurations.runtimeClasspath.state == RESOLVED))
         from(configurations.runtimeClasspath)
     }
+}
+
+tasks.register("badZippingTask2", Zip) {
+    def files = configurations.runtimeClasspath.files // <2>
+    from(files)
+    logger.lifecycle("Resolved: " + (configurations.runtimeClasspath.state == RESOLVED))
+}
+
+tasks.register("badZippingTask3", Zip) {
+    def files = configurations.runtimeClasspath + layout.projectDirectory.file("extra.txt") // <3>
+    from(files)
+    logger.lifecycle("Resolved: " + (configurations.runtimeClasspath.state == RESOLVED))
 }
 // end::avoid-this[]
