--- a/platforms/documentation/docs/src/snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-avoid/tests/avoidJdkCollectionApiOnFileCollections-avoid.sample.conf
+++ b/platforms/documentation/docs/src/snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-avoid/tests/avoidJdkCollectionApiOnFileCollections-avoid.sample.conf
@@ -1,13 +1,17 @@
 commands: [{
     executable: gradle
-    args: badZippingTask
+    args: badCountingTask
     expected-output-file: avoidJdkCollectionApiOnFileCollections-avoid.out
 }, {
     executable: gradle
-    args: badZippingTask2
+    args: badCountingTask2
     expected-output-file: avoidJdkCollectionApiOnFileCollections-avoid2.out
 }, {
-     executable: gradle
-     args: badZippingTask3
-     expected-output-file: avoidJdkCollectionApiOnFileCollections-avoid3.out
- }]
+    executable: gradle
+    args: badCountingTask3
+    expected-output-file: avoidJdkCollectionApiOnFileCollections-avoid3.out
+}, {
+    executable: gradle
+    args: badZippingTask
+    expected-output-file: avoidJdkCollectionApiOnFileCollections-avoid-zip.out
+}]
