--- a/platforms/documentation/docs/src/snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-do/groovy/lib/build.gradle
+++ b/platforms/documentation/docs/src/snippets/bestPractices/avoidJdkCollectionApiOnFileCollections-do/groovy/lib/build.gradle
@@ -9,9 +9,19 @@ dependencies {
 }
 
 // tag::do-this[]
-tasks.register("goodZippingTask", Zip) {
-    from(configurations.runtimeClasspath) // <1>
-    from(layout.projectDirectory.file("extra.txt")) // <2>
+abstract class FileCounterTask extends DefaultTask {
+    @InputFiles
+    abstract ConfigurableFileCollection getCountMe();
+
+    @TaskAction
+    void countFiles() {
+        logger.lifecycle("Count: " + countMe.files.size())
+    }
+}
+
+tasks.register("goodCountingTask", FileCounterTask) {
+    countMe.from(configurations.runtimeClasspath) // <1>
+    countMe.from(layout.projectDirectory.file("extra.txt")) // <2>
     logger.lifecycle("Resolved: " + (configurations.runtimeClasspath.state == RESOLVED))
 }
 // end::do-this[]
