--- a/platforms/documentation/docs/src/snippets/bestPractices/useGavString-avoid/tests/sanityCheck.sample.conf
+++ b/platforms/documentation/docs/src/snippets/bestPractices/useGavString-avoid/tests/sanityCheck.sample.conf
@@ -1,5 +1,4 @@
 executable: gradle
-args: listJars
+args: tasks
 # Do not fail for deprecation warnings: This sample explicitly demonstrates deprecated behavior
-flags: "--quiet --warning-mode=all"
-expected-output-file: externalDependencies.out
+flags: "--warning-mode=all"
