Revises content filtering best practices
Updates the content filtering documentation to emphasize exclusive content filtering and clarifies the risks of using fallback repositories.

It also adds a new best practice entry to the index and updates code snippets for better clarity and demonstration of content filtering techniques.

--- a/platforms/documentation/docs/src/snippets/bestPractices/contentFiltering-do/groovy/settings.gradle
+++ b/platforms/documentation/docs/src/snippets/bestPractices/contentFiltering-do/groovy/settings.gradle
@@ -3,10 +3,12 @@ dependencyResolutionManagement {
     repositories {
         google {
             content {
-                // Only use this repository for the androidx.activity group
-                includeGroup "androidx.activity"
+                // Use this repository for androidx and GMS dependencies
+                includeGroupByRegex("androidx.*")
+                includeGroup("com.google.gms")
             }
         }
+        // Specify the fallback repository last
         mavenCentral()
     }
 }
