--- a/platforms/documentation/docs/src/snippets/bestPractices/contentFilteringExclusive-do/groovy/settings.gradle
+++ b/platforms/documentation/docs/src/snippets/bestPractices/contentFilteringExclusive-do/groovy/settings.gradle
@@ -6,10 +6,12 @@ dependencyResolutionManagement {
                 google()
             }
             filter {
-                // Only use this repository for the androidx.activity group
-                includeGroup "androidx.activity"
+                // Only use this repository, and use this repository only, for androidx and GMS dependencies
+                includeGroupByRegex("androidx.*")
+                includeGroup("com.google.gms")
             }
         }
+        // Specify the fallback repository last
         mavenCentral()
     }
 }
