--- a/released-versions.json
+++ b/released-versions.json
@@ -9,6 +9,10 @@
   },
   "finalReleases": [
     {
+      "version": "7.6.5",
+      "buildTime": "20250604130222+0000"
+    },
+    {
       "version": "7.6.4",
       "buildTime": "20240205142918+0000"
     },
