--- a/gradle/dependency-management/agp-versions.properties
+++ b/gradle/dependency-management/agp-versions.properties
@@ -1,4 +1,4 @@
 # Generated - Update by running `./gradlew updateAgpVersions`
-latests=8.4.2,8.5.2,8.6.1,8.7.3,8.8.2,8.9.3,8.10.1,8.11.0-rc01,8.12.0-alpha04
-nightlyBuildId=13611597
+latests=8.4.2,8.5.2,8.6.1,8.7.3,8.8.2,8.9.3,8.10.1,8.11.0,8.12.0-alpha08
+nightlyBuildId=13755604
 nightlyVersion=8.12.0-dev
