Moves Javadoc tooling to dedicated subproject
- Moves the Javadoc tooling and related infrastructure from the language-java plugin to a dedicated javadoc subproject.
- This change improves project modularity and reduces circular dependencies.

--- a/.teamcity/subprojects.json
+++ b/.teamcity/subprojects.json
@@ -777,6 +777,13 @@
     "crossVersionTests": false
   },
   {
+    "name": "javadoc",
+    "path": "platforms/jvm/javadoc",
+    "unitTests": true,
+    "functionalTests": true,
+    "crossVersionTests": false
+  },
+  {
     "name": "jvm-services",
     "path": "platforms/jvm/jvm-services",
     "unitTests": true,
