--- a/.teamcity/subprojects.json
+++ b/.teamcity/subprojects.json
@@ -763,6 +763,13 @@
     "crossVersionTests": false
   },
   {
+    "name": "java-api-extractor",
+    "path": "platforms/core-configuration/java-api-extractor",
+    "unitTests": true,
+    "functionalTests": false,
+    "crossVersionTests": false
+  },
+  {
     "name": "java-compiler-plugin",
     "path": "platforms/jvm/java-compiler-plugin",
     "unitTests": true,
