--- a/platforms/documentation/docs/src/snippets/bestPractices/avoidEmptyProjects-do/tests/avoidEmptyProjects-do.sample.conf
+++ b/platforms/documentation/docs/src/snippets/bestPractices/avoidEmptyProjects-do/tests/avoidEmptyProjects-do.sample.conf
@@ -2,4 +2,6 @@ commands: [{
     executable: gradle
     args: projects
     expected-output-file: avoidEmptyProjects-do.out
+    allow-additional-output: true
+    allow-disordered-output: true
 }]
