Fix project architecture checks and some tests

--- a/.teamcity/subprojects.json
+++ b/.teamcity/subprojects.json
@@ -1290,8 +1290,8 @@
   {
     "name": "software-features",
     "path": "platforms/core-configuration/software-features",
-    "unitTests": true,
-    "functionalTests": true,
+    "unitTests": false,
+    "functionalTests": false,
     "crossVersionTests": false
   },
   {
@@ -1305,7 +1305,7 @@
     "name": "software-features-demos",
     "path": "platforms/core-configuration/software-features-demos",
     "unitTests": false,
-    "functionalTests": false,
+    "functionalTests": true,
     "crossVersionTests": false
   },
   {
