Fix code quality checks

--- a/platforms/core-configuration/software-features-demos/src/main/resources/META-INF/gradle-plugins/org.gradle.demo-quality-ecosystem.properties
+++ b/platforms/core-configuration/software-features-demos/src/main/resources/META-INF/gradle-plugins/org.gradle.demo-quality-ecosystem.properties
@@ -14,4 +14,4 @@
 # limitations under the License.
 #
 
-implementation-class=org.gradle.api.plugins.demoCodeQuality.DemoCodeQualityEcosystemPlugin
+implementation-class=org.gradle.api.plugins.demo.quality.DemoCodeQualityEcosystemPlugin
