--- a/platforms/core-configuration/software-features-demos/src/main/resources/META-INF/gradle-plugins/org.gradle.java-ecosystem.properties
+++ b/platforms/core-configuration/software-features-demos/src/main/resources/META-INF/gradle-plugins/org.gradle.java-ecosystem.properties
@@ -14,4 +14,4 @@
 # limitations under the License.
 #
 
-implementation-class=org.gradle.api.plugins.java.JavaEcosystemPlugin
+implementation-class=org.gradle.api.plugins.java.plugin.JavaEcosystemPlugin
