doc: reduce boilerplate in `exec-op-inject` sample
You don't need to instantiate a new injected `ExecOperations` object in every custom task; you can do it just once at the top of the build script, and then use the injected `ExecOperations` object at execution time.

This commit doesn't directly reduce the lines of code here in the sample, but if there were multiple tasks using `execOps.exec`, the tasks would be able to skip the instantiation line.

Signed-off-by: Dan Fabulich <dan@fabulich.com>

--- a/platforms/documentation/docs/src/snippets/providers/services/groovy/build.gradle
+++ b/platforms/documentation/docs/src/snippets/providers/services/groovy/build.gradle
@@ -239,11 +239,11 @@ interface InjectedExecOps {
     ExecOperations getExecOps()
 }
 
-tasks.register('myAdHocExecOperationsTask') {
-    def injected = project.objects.newInstance(InjectedExecOps)
+def execOps = project.objects.newInstance(InjectedExecOps).execOps
 
+tasks.register('myAdHocExecOperationsTask') {
     doLast {
-        injected.execOps.exec {
+        execOps.exec {
             commandLine 'ls', '-la'
         }
     }
