--- a/.github/workflows/contributor-pr.yml
+++ b/.github/workflows/contributor-pr.yml
@@ -42,9 +42,9 @@ jobs:
         with:
           script: |
             if (context.payload.pull_request && context.payload.pull_request.head.repo.fork) {
-                core.setOutput('sys-prop-args', '-DagreePublicBuildScanTermOfService=yes -DcacheNode=us --scan')
+                core.setOutput('sys-prop-args', '-DagreePublicBuildScanTermOfService=yes -Ddevelocity.edge.discovery=false -DcacheNode=us --scan')
             } else {
-                core.setOutput('sys-prop-args', '-DcacheNode=us')
+                core.setOutput('sys-prop-args', '-Ddevelocity.edge.discovery=false -DcacheNode=us')
             }
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
