--- a/gradle/dependency-management/kotlin-versions.properties
+++ b/gradle/dependency-management/kotlin-versions.properties
@@ -1,2 +1,2 @@
 # Generated - Update by running `./gradlew updateKotlinVersions`
-latests=2.0.0,2.0.21,2.1.0,2.1.21,2.2.0,2.2.10-RC,2.2.20-Beta2
+latests=2.0.0,2.0.21,2.1.0,2.1.21,2.2.0,2.2.10-RC2,2.2.20-Beta2
