--- a/.github/workflows/issue-metadata.yml
+++ b/.github/workflows/issue-metadata.yml
@@ -2,7 +2,7 @@ name: Check issues metadata
 
 on:
   issues:
-    types: [ opened, unlabeled, closed, reopened ]
+    types: [ opened, labeled, unlabeled, closed, reopened, milestoned, demilestoned ]
 
 permissions: {}
 
