--- a/.github/workflows/pull-metadata.yml
+++ b/.github/workflows/pull-metadata.yml
@@ -1,7 +1,7 @@
 name: Check pulls metadata
 
 on:
-  pull_request:
+  pull_request_target:
     types: [ closed, unlabeled, milestoned, demilestoned ]
 
 permissions: {}
