Deprecate Configuration.resolve
This method is identical in behavior and signature to the getFiles method.
We deprecate this method in favor of the direct replacement getFiles.

In the upgrade guide, we further recommend using FileCollection instead of Set<File>

--- a/platforms/documentation/docs/src/snippets/bestPractices/avoidResolvingConfigurationsManually-avoid/groovy/app/build.gradle
+++ b/platforms/documentation/docs/src/snippets/bestPractices/avoidResolvingConfigurationsManually-avoid/groovy/app/build.gradle
@@ -30,6 +30,6 @@ abstract class BadClasspathPrinter extends DefaultTask {
 }
 
 tasks.register("badClasspathPrinter", BadClasspathPrinter) {
-    classpath = configurations.named("runtimeClasspath").get().resolve() // <4>
+    classpath = configurations.named("runtimeClasspath").get().files // <4>
 }
 // end::avoid-this[]
