--- a/platforms/documentation/docs/src/snippets/dependencyManagement/dependencyLocking-lockingAllConfigurations/groovy/build.gradle
+++ b/platforms/documentation/docs/src/snippets/dependencyManagement/dependencyLocking-lockingAllConfigurations/groovy/build.gradle
@@ -18,7 +18,7 @@ tasks.register('resolveAndLockAll') {
         configurations.findAll {
             // Add any custom filtering on the configurations to be resolved
             it.canBeResolved
-        }.each { it.resolve() }
+        }.each { it.files }
     }
 }
 // end::resolve-all[]
